--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,9 @@ applications:
     routes:
     - route: pal-tracker-7759b839-ab2d-4c00-9bd9-83a5c8a2e18e.cfapps.io
 
+    services:
+    - tracker-database
+
     env:
       WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
